// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts should match a snapshot with accounts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 81"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                fill="#23A4DE"
              />
              <path
                d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                fill="#0061A8"
              />
              <path
                d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                fill="#262F69"
              />
              <path
                d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                fill="#262F69"
              />
              <path
                d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                fill="#262F69"
              />
              <path
                d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                fill="white"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                fill="#262F69"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                fill="#7BC9EB"
              />
              <path
                d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                fill="#0061A8"
              />
              <path
                d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                fill="#32BCFA"
              />
              <path
                d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                fill="#31448F"
              />
              <path
                d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                fill="#262F69"
              />
              <path
                d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                fill="#7BC9EB"
              />
              <path
                d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                fill="#FABE3D"
              />
              <path
                d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                fill="#23A4DE"
              />
              <rect
                fill="#E3E3E3"
                height="14"
                rx="7"
                width="25"
                x="41"
                y="12"
              />
              <g>
                <path
                  d="M60.9063 28.5925C60.4698 26.9791 58.7332 26.0523 57.1214 26.7001C56.706 25.1646 55.0871 24.1903 53.4459 24.7737V20.8149C53.4445 17.0646 47.77 17.0588 47.7686 20.8149V35.4159C46.3325 33.9798 45.0477 32.6951 45.0446 32.692C43.9384 31.5844 42.1363 31.5844 41.0303 32.6921C39.9248 33.7957 39.9209 35.5975 41.0304 36.7062C41.3048 36.9803 48.2601 43.9358 48.5343 44.2101C50.3214 45.9972 52.7444 47 55.2714 46.9999V47C60.5347 46.9993 64.8001 42.7339 64.8006 37.4708C64.8006 35.5783 64.8006 35.8831 64.8006 31.2232C64.7998 29.2282 62.7849 27.8374 60.9063 28.5925Z"
                  fill="#FFB71B"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="29"
                    transform="translate(38 18)"
                    width="29"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see also below for more resources amd assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Provision User
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="2"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                User Name
              </div>
              <div
                class="el-table-header"
              >
                Status
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 79 80"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <mask
                        height="72"
                        id="mask0_7486_88784"
                        maskUnits="userSpaceOnUse"
                        width="72"
                        x="5"
                        y="7"
                      >
                        <circle
                          cx="41.0144"
                          cy="42.6966"
                          fill="#C4C4C4"
                          r="35.6309"
                          transform="rotate(-2.75697 41.0144 42.6966)"
                        />
                      </mask>
                      <g
                        mask="url(#mask0_7486_88784)"
                      >
                        <rect
                          fill="white"
                          height="80.9118"
                          transform="rotate(-2.75697 -2.50684 3.1748)"
                          width="88.3349"
                          x="-2.50684"
                          y="3.1748"
                        />
                        <path
                          d="M70.3574 81.0422C70.3574 81.0422 61.8307 81.4528 55.2964 76.9368C45.476 74.0857 48.9105 53.9161 49.6294 53.1428C50.3481 52.3692 52.0831 52.8454 55.9758 54.4604C61.3294 56.6814 62.6238 61.2989 64.5359 64.6455C67.2517 69.3986 69.9646 72.8862 69.9646 72.8862C71.4065 72.8168 69.0303 77.493 70.3574 81.0422Z"
                          fill="#23A4DE"
                        />
                        <path
                          d="M33.2762 57.9805C32.9622 60.1558 25.8632 68.9556 25.404 80.8675C34.4689 89.199 47.9697 90.0308 57.9981 83.7437C56.6795 73.9172 52.516 58.8145 50.3053 54.4072C47.2325 48.2814 41.1839 47.1559 41.1839 47.1559C41.1839 47.1559 33.6878 55.1303 33.2762 57.9805Z"
                          fill="#23A4DE"
                        />
                        <ellipse
                          cx="42.9394"
                          cy="53.038"
                          fill="#0076AB"
                          rx="6.69342"
                          ry="5.29479"
                          transform="rotate(-2.75697 42.9394 53.038)"
                        />
                        <path
                          d="M23.7949 94.0608C23.7949 94.0608 22.9216 79.8757 29.8486 74.1749C36.7756 68.4745 36.7222 54.2479 36.1497 53.451C35.5773 52.6537 28.8097 53.9496 25.717 56.8097C19.9565 62.137 15.8876 70.3815 13.7234 77.8244C10.4348 76.0227 24.7845 90.6383 23.7949 94.0608Z"
                          fill="#23A4DE"
                        />
                        <path
                          d="M25.3927 78.941C26.3442 75.5509 30.0652 67.94 30.0652 67.94C30.0652 67.94 27.5278 76.9802 29.6135 81.7104C28.1128 81.4111 26.5585 79.9996 25.3927 78.941Z"
                          fill="#0076AB"
                        />
                        <path
                          d="M60.7921 77.5352C59.5073 74.2212 55.0303 66.9349 55.0303 66.9349C55.0303 66.9349 58.4567 75.7722 56.8198 80.7273C58.2987 80.2809 59.7235 78.712 60.7921 77.5352Z"
                          fill="#0076AB"
                        />
                      </g>
                      <path
                        d="M30.7224 35.1932C30.8665 38.1844 28.72 40.7183 25.9283 40.8528C23.1363 40.9872 20.7563 38.6712 20.6122 35.68C20.4682 32.6885 22.6147 30.1546 25.4067 30.0201C28.1984 29.8857 30.5784 32.2017 30.7224 35.1932Z"
                        fill="#FFE5C7"
                      />
                      <path
                        d="M64.4129 33.2671C64.5569 36.2586 62.4104 38.7925 59.6188 38.927C56.8267 39.0614 54.4467 36.7454 54.3026 33.7539C54.1586 30.7627 56.3051 28.2284 59.0971 28.094C61.8888 27.9596 64.2688 30.2759 64.4129 33.2671Z"
                        fill="#FFE5C7"
                      />
                      <path
                        d="M24.6042 32.8781C24.6042 32.8781 26.4272 56.2812 43.2951 55.4689C60.1631 54.6567 61.3687 36.3279 60.6508 29.6805C59.9332 23.033 56.4599 12.8643 56.4599 12.8643L42.2006 12.0892L29.8192 15.1914L24.1354 19.0149L23.9441 23.3044L24.6042 32.8781Z"
                        fill="#FFE5C7"
                      />
                      <path
                        d="M32.717 25.6259C32.6896 26.1091 33.2962 26.0049 33.7978 25.922C34.8411 25.7497 34.5297 24.9804 36.728 24.9601C37.5256 24.9527 38.8279 26.2169 39.1959 25.5339C40.2414 23.5932 32.9055 22.3065 32.717 25.6259Z"
                        fill="#262F69"
                      />
                      <path
                        d="M55.3808 25.0609C54.8804 24.1237 53.2226 23.7212 52.0745 23.8482C51.1133 23.9547 49.5039 24.4366 49.5731 25.4207C49.5943 25.722 50.0455 25.6677 50.3964 25.5874C50.9416 25.4626 51.1613 25.2402 51.6884 25.1921C52.2009 25.1451 52.7287 25.2329 53.1794 25.4368C53.7252 25.6842 54.1131 26.0653 54.8017 25.8719C55.4199 25.6981 55.6315 25.5305 55.3808 25.0609Z"
                        fill="#262F69"
                      />
                      <path
                        d="M53.7598 28.1333C53.6767 28.086 53.5886 28.0447 53.4955 28.0106C50.4199 26.8814 49.3762 31.7553 51.6212 32.5464C54.8624 33.6884 55.6849 29.2332 53.7598 28.1333Z"
                        fill="#262F69"
                      />
                      <path
                        d="M53.3779 28.6731C53.0369 28.3496 52.3879 28.6373 52.4806 29.0775C52.5277 29.302 52.5727 29.4815 52.78 29.6344C53.0962 29.8681 53.7297 29.5944 53.704 29.2219C53.6871 28.9794 53.5556 28.8417 53.3779 28.6731Z"
                        fill="white"
                      />
                      <path
                        d="M36.058 43.5956C36.058 43.5956 43.6302 48.1135 49.4022 44.7856C46.2714 49.3031 37.817 48.611 36.058 43.5956Z"
                        fill="#262F69"
                      />
                      <path
                        d="M26.7106 7.6701C30.9503 1.53414 39.8927 0.103319 47.9804 1.61918C52.5585 2.47723 67.5929 7.66878 63.2938 16.4786C63.5443 19.1175 63.6857 21.7793 63.6882 24.4301C63.6895 26.1153 63.7213 27.9269 63.3048 29.5738C62.7828 31.6377 60.7663 31.0265 60.0744 29.3956C58.8181 26.4341 60.0073 23.1506 57.9824 20.2383C53.3814 13.6217 49.9386 17.1144 42.13 18.1329C36.0189 18.93 29.9078 15.7577 29.9078 15.7577C29.9078 15.7577 25.5288 22.1067 26.192 32.069C26.4009 35.2119 20.9426 34.2216 21.42 27.3008C21.897 20.38 20.2442 8.2906 26.7106 7.6701Z"
                        fill="#262F69"
                      />
                      <path
                        d="M20.5116 43.1799C19.8492 43.0716 19.2068 42.9195 18.602 42.7278C14.1686 41.3225 11.6143 37.7649 10.7136 33.1435C10.6281 32.7057 9.99455 32.7167 9.92438 33.1572C9.06569 38.5607 5.96136 42.4254 0.51012 43.5359C0.0765863 43.6242 0.0876459 44.251 0.524112 44.3239C5.96009 45.2316 9.25276 48.9775 10.2955 54.3047C10.3611 54.6403 10.7167 54.6358 10.6963 54.6284C10.8906 54.6248 11.0544 54.482 11.0847 54.2901C11.5199 51.5259 12.8118 47.7583 16.4944 45.5075C17.6709 44.7891 19.0275 44.2713 20.5262 43.9683C20.7159 43.93 20.8511 43.7616 20.8475 43.5681C20.8439 43.3745 20.7025 43.2112 20.5116 43.1799Z"
                        fill="#FFB71B"
                      />
                      <path
                        d="M18.1247 12.3463C17.8906 12.308 17.6635 12.2542 17.4497 12.1864C15.8826 11.6897 14.9796 10.4321 14.6612 8.79842C14.631 8.64365 14.407 8.64754 14.3822 8.80329C14.0787 10.7134 12.9813 12.0795 11.0543 12.4721C10.9011 12.5033 10.905 12.7249 11.0593 12.7506C12.9809 13.0715 14.1448 14.3956 14.5134 16.2788C14.5366 16.3974 14.6623 16.3958 14.6551 16.3932C14.7238 16.3919 14.7817 16.3415 14.7924 16.2736C14.9463 15.2965 15.4029 13.9647 16.7047 13.169C17.1206 12.9151 17.6001 12.732 18.1299 12.6249C18.197 12.6114 18.2448 12.5519 18.2435 12.4835C18.2422 12.415 18.1922 12.3573 18.1247 12.3463Z"
                        fill="#FFB71B"
                      />
                      <path
                        d="M72.5496 49.7267C72.2025 49.67 71.8658 49.5902 71.5488 49.4898C69.2254 48.7533 67.8867 46.8888 67.4146 44.4668C67.3698 44.2373 67.0378 44.2431 67.001 44.474C66.551 47.3058 64.9241 49.3313 62.0672 49.9133C61.8399 49.9596 61.8457 50.2881 62.0745 50.3263C64.9234 50.802 66.649 52.7651 67.1955 55.5571C67.2299 55.733 67.4163 55.7306 67.4056 55.7267C67.5074 55.7248 67.5933 55.65 67.6091 55.5494C67.8372 54.1008 68.5143 52.1262 70.4443 50.9466C71.0609 50.5701 71.7718 50.2987 72.5573 50.1399C72.6567 50.1199 72.7276 50.0316 72.7257 49.9302C72.7238 49.8287 72.6497 49.7431 72.5496 49.7267Z"
                        fill="#FFB71B"
                      />
                      <path
                        d="M36.7832 28.1338C36.7001 28.0865 36.6121 28.0452 36.5189 28.011C33.4433 26.8819 32.3996 31.7558 34.6447 32.5469C37.8859 33.6889 38.7083 29.2337 36.7832 28.1338Z"
                        fill="#262F69"
                      />
                      <path
                        d="M36.4031 28.6735C36.062 28.3501 35.4131 28.6378 35.5057 29.078C35.5533 29.3023 35.5978 29.482 35.8052 29.6349C36.1214 29.8686 36.755 29.5952 36.7292 29.2224C36.7123 28.9799 36.5808 28.8421 36.4031 28.6735Z"
                        fill="white"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="User Name"
                  >
                    hiyaall
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Status"
                  >
                    User is active
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 18 18"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        Update
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        Deactivate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 81"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
              fill="#23A4DE"
            />
            <path
              d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
              fill="#0061A8"
            />
            <path
              d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
              fill="#262F69"
            />
            <path
              d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
              fill="#262F69"
            />
            <path
              d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
              fill="#262F69"
            />
            <path
              d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
              fill="white"
            />
            <path
              d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
              fill="#262F69"
            />
            <path
              d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
              fill="#7BC9EB"
            />
            <path
              d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
              fill="#0061A8"
            />
            <path
              d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
              fill="#32BCFA"
            />
            <path
              d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
              fill="#31448F"
            />
            <path
              d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
              fill="#262F69"
            />
            <path
              d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
              fill="#7BC9EB"
            />
            <path
              d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
              fill="#FABE3D"
            />
            <path
              d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
              fill="#23A4DE"
            />
            <rect
              fill="#E3E3E3"
              height="14"
              rx="7"
              width="25"
              x="41"
              y="12"
            />
            <g>
              <path
                d="M60.9063 28.5925C60.4698 26.9791 58.7332 26.0523 57.1214 26.7001C56.706 25.1646 55.0871 24.1903 53.4459 24.7737V20.8149C53.4445 17.0646 47.77 17.0588 47.7686 20.8149V35.4159C46.3325 33.9798 45.0477 32.6951 45.0446 32.692C43.9384 31.5844 42.1363 31.5844 41.0303 32.6921C39.9248 33.7957 39.9209 35.5975 41.0304 36.7062C41.3048 36.9803 48.2601 43.9358 48.5343 44.2101C50.3214 45.9972 52.7444 47 55.2714 46.9999V47C60.5347 46.9993 64.8001 42.7339 64.8006 37.4708C64.8006 35.5783 64.8006 35.8831 64.8006 31.2232C64.7998 29.2282 62.7849 27.8374 60.9063 28.5925Z"
                fill="#FFB71B"
              />
            </g>
            <defs>
              <clippath
                id="clip0"
              >
                <rect
                  fill="white"
                  height="29"
                  transform="translate(38 18)"
                  width="29"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see also below for more resources amd assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Provision User
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="2"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              User Name
            </div>
            <div
              class="el-table-header"
            >
              Status
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 79 80"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      height="72"
                      id="mask0_7486_88784"
                      maskUnits="userSpaceOnUse"
                      width="72"
                      x="5"
                      y="7"
                    >
                      <circle
                        cx="41.0144"
                        cy="42.6966"
                        fill="#C4C4C4"
                        r="35.6309"
                        transform="rotate(-2.75697 41.0144 42.6966)"
                      />
                    </mask>
                    <g
                      mask="url(#mask0_7486_88784)"
                    >
                      <rect
                        fill="white"
                        height="80.9118"
                        transform="rotate(-2.75697 -2.50684 3.1748)"
                        width="88.3349"
                        x="-2.50684"
                        y="3.1748"
                      />
                      <path
                        d="M70.3574 81.0422C70.3574 81.0422 61.8307 81.4528 55.2964 76.9368C45.476 74.0857 48.9105 53.9161 49.6294 53.1428C50.3481 52.3692 52.0831 52.8454 55.9758 54.4604C61.3294 56.6814 62.6238 61.2989 64.5359 64.6455C67.2517 69.3986 69.9646 72.8862 69.9646 72.8862C71.4065 72.8168 69.0303 77.493 70.3574 81.0422Z"
                        fill="#23A4DE"
                      />
                      <path
                        d="M33.2762 57.9805C32.9622 60.1558 25.8632 68.9556 25.404 80.8675C34.4689 89.199 47.9697 90.0308 57.9981 83.7437C56.6795 73.9172 52.516 58.8145 50.3053 54.4072C47.2325 48.2814 41.1839 47.1559 41.1839 47.1559C41.1839 47.1559 33.6878 55.1303 33.2762 57.9805Z"
                        fill="#23A4DE"
                      />
                      <ellipse
                        cx="42.9394"
                        cy="53.038"
                        fill="#0076AB"
                        rx="6.69342"
                        ry="5.29479"
                        transform="rotate(-2.75697 42.9394 53.038)"
                      />
                      <path
                        d="M23.7949 94.0608C23.7949 94.0608 22.9216 79.8757 29.8486 74.1749C36.7756 68.4745 36.7222 54.2479 36.1497 53.451C35.5773 52.6537 28.8097 53.9496 25.717 56.8097C19.9565 62.137 15.8876 70.3815 13.7234 77.8244C10.4348 76.0227 24.7845 90.6383 23.7949 94.0608Z"
                        fill="#23A4DE"
                      />
                      <path
                        d="M25.3927 78.941C26.3442 75.5509 30.0652 67.94 30.0652 67.94C30.0652 67.94 27.5278 76.9802 29.6135 81.7104C28.1128 81.4111 26.5585 79.9996 25.3927 78.941Z"
                        fill="#0076AB"
                      />
                      <path
                        d="M60.7921 77.5352C59.5073 74.2212 55.0303 66.9349 55.0303 66.9349C55.0303 66.9349 58.4567 75.7722 56.8198 80.7273C58.2987 80.2809 59.7235 78.712 60.7921 77.5352Z"
                        fill="#0076AB"
                      />
                    </g>
                    <path
                      d="M30.7224 35.1932C30.8665 38.1844 28.72 40.7183 25.9283 40.8528C23.1363 40.9872 20.7563 38.6712 20.6122 35.68C20.4682 32.6885 22.6147 30.1546 25.4067 30.0201C28.1984 29.8857 30.5784 32.2017 30.7224 35.1932Z"
                      fill="#FFE5C7"
                    />
                    <path
                      d="M64.4129 33.2671C64.5569 36.2586 62.4104 38.7925 59.6188 38.927C56.8267 39.0614 54.4467 36.7454 54.3026 33.7539C54.1586 30.7627 56.3051 28.2284 59.0971 28.094C61.8888 27.9596 64.2688 30.2759 64.4129 33.2671Z"
                      fill="#FFE5C7"
                    />
                    <path
                      d="M24.6042 32.8781C24.6042 32.8781 26.4272 56.2812 43.2951 55.4689C60.1631 54.6567 61.3687 36.3279 60.6508 29.6805C59.9332 23.033 56.4599 12.8643 56.4599 12.8643L42.2006 12.0892L29.8192 15.1914L24.1354 19.0149L23.9441 23.3044L24.6042 32.8781Z"
                      fill="#FFE5C7"
                    />
                    <path
                      d="M32.717 25.6259C32.6896 26.1091 33.2962 26.0049 33.7978 25.922C34.8411 25.7497 34.5297 24.9804 36.728 24.9601C37.5256 24.9527 38.8279 26.2169 39.1959 25.5339C40.2414 23.5932 32.9055 22.3065 32.717 25.6259Z"
                      fill="#262F69"
                    />
                    <path
                      d="M55.3808 25.0609C54.8804 24.1237 53.2226 23.7212 52.0745 23.8482C51.1133 23.9547 49.5039 24.4366 49.5731 25.4207C49.5943 25.722 50.0455 25.6677 50.3964 25.5874C50.9416 25.4626 51.1613 25.2402 51.6884 25.1921C52.2009 25.1451 52.7287 25.2329 53.1794 25.4368C53.7252 25.6842 54.1131 26.0653 54.8017 25.8719C55.4199 25.6981 55.6315 25.5305 55.3808 25.0609Z"
                      fill="#262F69"
                    />
                    <path
                      d="M53.7598 28.1333C53.6767 28.086 53.5886 28.0447 53.4955 28.0106C50.4199 26.8814 49.3762 31.7553 51.6212 32.5464C54.8624 33.6884 55.6849 29.2332 53.7598 28.1333Z"
                      fill="#262F69"
                    />
                    <path
                      d="M53.3779 28.6731C53.0369 28.3496 52.3879 28.6373 52.4806 29.0775C52.5277 29.302 52.5727 29.4815 52.78 29.6344C53.0962 29.8681 53.7297 29.5944 53.704 29.2219C53.6871 28.9794 53.5556 28.8417 53.3779 28.6731Z"
                      fill="white"
                    />
                    <path
                      d="M36.058 43.5956C36.058 43.5956 43.6302 48.1135 49.4022 44.7856C46.2714 49.3031 37.817 48.611 36.058 43.5956Z"
                      fill="#262F69"
                    />
                    <path
                      d="M26.7106 7.6701C30.9503 1.53414 39.8927 0.103319 47.9804 1.61918C52.5585 2.47723 67.5929 7.66878 63.2938 16.4786C63.5443 19.1175 63.6857 21.7793 63.6882 24.4301C63.6895 26.1153 63.7213 27.9269 63.3048 29.5738C62.7828 31.6377 60.7663 31.0265 60.0744 29.3956C58.8181 26.4341 60.0073 23.1506 57.9824 20.2383C53.3814 13.6217 49.9386 17.1144 42.13 18.1329C36.0189 18.93 29.9078 15.7577 29.9078 15.7577C29.9078 15.7577 25.5288 22.1067 26.192 32.069C26.4009 35.2119 20.9426 34.2216 21.42 27.3008C21.897 20.38 20.2442 8.2906 26.7106 7.6701Z"
                      fill="#262F69"
                    />
                    <path
                      d="M20.5116 43.1799C19.8492 43.0716 19.2068 42.9195 18.602 42.7278C14.1686 41.3225 11.6143 37.7649 10.7136 33.1435C10.6281 32.7057 9.99455 32.7167 9.92438 33.1572C9.06569 38.5607 5.96136 42.4254 0.51012 43.5359C0.0765863 43.6242 0.0876459 44.251 0.524112 44.3239C5.96009 45.2316 9.25276 48.9775 10.2955 54.3047C10.3611 54.6403 10.7167 54.6358 10.6963 54.6284C10.8906 54.6248 11.0544 54.482 11.0847 54.2901C11.5199 51.5259 12.8118 47.7583 16.4944 45.5075C17.6709 44.7891 19.0275 44.2713 20.5262 43.9683C20.7159 43.93 20.8511 43.7616 20.8475 43.5681C20.8439 43.3745 20.7025 43.2112 20.5116 43.1799Z"
                      fill="#FFB71B"
                    />
                    <path
                      d="M18.1247 12.3463C17.8906 12.308 17.6635 12.2542 17.4497 12.1864C15.8826 11.6897 14.9796 10.4321 14.6612 8.79842C14.631 8.64365 14.407 8.64754 14.3822 8.80329C14.0787 10.7134 12.9813 12.0795 11.0543 12.4721C10.9011 12.5033 10.905 12.7249 11.0593 12.7506C12.9809 13.0715 14.1448 14.3956 14.5134 16.2788C14.5366 16.3974 14.6623 16.3958 14.6551 16.3932C14.7238 16.3919 14.7817 16.3415 14.7924 16.2736C14.9463 15.2965 15.4029 13.9647 16.7047 13.169C17.1206 12.9151 17.6001 12.732 18.1299 12.6249C18.197 12.6114 18.2448 12.5519 18.2435 12.4835C18.2422 12.415 18.1922 12.3573 18.1247 12.3463Z"
                      fill="#FFB71B"
                    />
                    <path
                      d="M72.5496 49.7267C72.2025 49.67 71.8658 49.5902 71.5488 49.4898C69.2254 48.7533 67.8867 46.8888 67.4146 44.4668C67.3698 44.2373 67.0378 44.2431 67.001 44.474C66.551 47.3058 64.9241 49.3313 62.0672 49.9133C61.8399 49.9596 61.8457 50.2881 62.0745 50.3263C64.9234 50.802 66.649 52.7651 67.1955 55.5571C67.2299 55.733 67.4163 55.7306 67.4056 55.7267C67.5074 55.7248 67.5933 55.65 67.6091 55.5494C67.8372 54.1008 68.5143 52.1262 70.4443 50.9466C71.0609 50.5701 71.7718 50.2987 72.5573 50.1399C72.6567 50.1199 72.7276 50.0316 72.7257 49.9302C72.7238 49.8287 72.6497 49.7431 72.5496 49.7267Z"
                      fill="#FFB71B"
                    />
                    <path
                      d="M36.7832 28.1338C36.7001 28.0865 36.6121 28.0452 36.5189 28.011C33.4433 26.8819 32.3996 31.7558 34.6447 32.5469C37.8859 33.6889 38.7083 29.2337 36.7832 28.1338Z"
                      fill="#262F69"
                    />
                    <path
                      d="M36.4031 28.6735C36.062 28.3501 35.4131 28.6378 35.5057 29.078C35.5533 29.3023 35.5978 29.482 35.8052 29.6349C36.1214 29.8686 36.755 29.5952 36.7292 29.2224C36.7123 28.9799 36.5808 28.8421 36.4031 28.6735Z"
                      fill="white"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="User Name"
                >
                  hiyaall
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Status"
                >
                  User is active
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 18 18"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      Update
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      Deactivate
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accounts should match a snapshot with no accounts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 81"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                fill="#23A4DE"
              />
              <path
                d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                fill="#0061A8"
              />
              <path
                d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                fill="#262F69"
              />
              <path
                d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                fill="#262F69"
              />
              <path
                d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                fill="#262F69"
              />
              <path
                d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                fill="white"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                fill="#262F69"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                fill="#7BC9EB"
              />
              <path
                d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                fill="#0061A8"
              />
              <path
                d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                fill="#32BCFA"
              />
              <path
                d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                fill="#31448F"
              />
              <path
                d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                fill="#262F69"
              />
              <path
                d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                fill="#7BC9EB"
              />
              <path
                d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                fill="#FABE3D"
              />
              <path
                d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                fill="#23A4DE"
              />
              <rect
                fill="#E3E3E3"
                height="14"
                rx="7"
                width="25"
                x="41"
                y="12"
              />
              <g>
                <path
                  d="M60.9063 28.5925C60.4698 26.9791 58.7332 26.0523 57.1214 26.7001C56.706 25.1646 55.0871 24.1903 53.4459 24.7737V20.8149C53.4445 17.0646 47.77 17.0588 47.7686 20.8149V35.4159C46.3325 33.9798 45.0477 32.6951 45.0446 32.692C43.9384 31.5844 42.1363 31.5844 41.0303 32.6921C39.9248 33.7957 39.9209 35.5975 41.0304 36.7062C41.3048 36.9803 48.2601 43.9358 48.5343 44.2101C50.3214 45.9972 52.7444 47 55.2714 46.9999V47C60.5347 46.9993 64.8001 42.7339 64.8006 37.4708C64.8006 35.5783 64.8006 35.8831 64.8006 31.2232C64.7998 29.2282 62.7849 27.8374 60.9063 28.5925Z"
                  fill="#FFB71B"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="29"
                    transform="translate(38 18)"
                    width="29"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see also below for more resources amd assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Provision User
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No accounts yet provisioned for your organisation
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 81"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
              fill="#23A4DE"
            />
            <path
              d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
              fill="#0061A8"
            />
            <path
              d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
              fill="#262F69"
            />
            <path
              d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
              fill="#262F69"
            />
            <path
              d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
              fill="#262F69"
            />
            <path
              d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
              fill="white"
            />
            <path
              d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
              fill="#262F69"
            />
            <path
              d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
              fill="#7BC9EB"
            />
            <path
              d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
              fill="#0061A8"
            />
            <path
              d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
              fill="#32BCFA"
            />
            <path
              d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
              fill="#31448F"
            />
            <path
              d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
              fill="#262F69"
            />
            <path
              d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
              fill="#7BC9EB"
            />
            <path
              d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
              fill="#FABE3D"
            />
            <path
              d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
              fill="#23A4DE"
            />
            <rect
              fill="#E3E3E3"
              height="14"
              rx="7"
              width="25"
              x="41"
              y="12"
            />
            <g>
              <path
                d="M60.9063 28.5925C60.4698 26.9791 58.7332 26.0523 57.1214 26.7001C56.706 25.1646 55.0871 24.1903 53.4459 24.7737V20.8149C53.4445 17.0646 47.77 17.0588 47.7686 20.8149V35.4159C46.3325 33.9798 45.0477 32.6951 45.0446 32.692C43.9384 31.5844 42.1363 31.5844 41.0303 32.6921C39.9248 33.7957 39.9209 35.5975 41.0304 36.7062C41.3048 36.9803 48.2601 43.9358 48.5343 44.2101C50.3214 45.9972 52.7444 47 55.2714 46.9999V47C60.5347 46.9993 64.8001 42.7339 64.8006 37.4708C64.8006 35.5783 64.8006 35.8831 64.8006 31.2232C64.7998 29.2282 62.7849 27.8374 60.9063 28.5925Z"
                fill="#FFB71B"
              />
            </g>
            <defs>
              <clippath
                id="clip0"
              >
                <rect
                  fill="white"
                  height="29"
                  transform="translate(38 18)"
                  width="29"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see also below for more resources amd assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Provision User
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No accounts yet provisioned for your organisation
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
